package com.lhf.designpatternlib.command;

/**
 * Created by Joshua on 2020/4/6 17:24.
 */
public interface IReceiver {
    void action();
}
